WebHook & Other Troubles I
- Реализована вебхук-версия бота
- Добавлена конфигурируемая возможность выбирать между типом запускаемого бота через переменные среды